<?xml version="1.0"?>
<package>
  <name>flip_bottle</name>
  <version>1.0.0</version>
  <description>Trying to flip a water bottle</description>

  <author email="srinjoy.majumdar@gmail.com">Srinjoy Majumdar</author>
  <maintainer email="srinjoy.majumdar@gmail.com">Srinjoy Majumdar</maintainer>

  <url type="website">https://github.com/srinjoym/flip-bottle</url>
  <url type="bugtracker">https://github.com/srinjoym/flip-bottle/issues</url>
  <url type="repository">https://github.com/srinjoym/flip-bottle</url>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>hlpr_manipulation_utils</run_depend>
  <run_depend>moveit_commander</run_depend>

  <export>
  </export>
</package>
